[package]
name = "hentavif"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
description = "Simple utility to convert images to avif"
readme = "README.md"
repository = "https://github.com/morr0ne/hentavif"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
strip = true
# panic = "abort"

[dependencies]
clap = { version = "4.5.27", features = [
    "cargo",
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
image = { version = "0.25.5", features = ["nasm"] }
thiserror = "2.0.11"
